Update products page

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -28,3 +28,25 @@
   font-weight: 700;
   letter-spacing: 2px;
 }
+
+.sections-navigation {
+  background-color: #181e4a;
+}
+
+.sections-navigation div {
+  padding: 0 150px;
+}
+
+.sections-navigation a {
+  text-decoration: none;
+  color: white;
+  font-weight: 200;
+}
+
+.section-content {
+  height: 100vh;
+}
+
+.section-content .text-darkblue {
+  color: #354092;
+}
