--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,11 +1,9 @@
 .banner {
   position: relative;
   text-align: center;
-  color: white;
 }
 
 .banner img {
-  width: 100%;
   height: 312px;
   object-fit: cover;
 }
@@ -15,18 +13,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .banner-label h1 {
-  font-weight: 600;
   letter-spacing: 2px;
 }
 
 h1 + div {
-  margin-top: 1rem;
   width: 100px;
   height: 4px;
   background-color: #d8b638;
@@ -35,6 +28,7 @@ h1 + div {
 div > a {
   color: white;
   font-weight: 300;
+  text-decoration: none;
 }
 
 div > a:hover {
