--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,7 +1,21 @@
 .navbar-label {
-  color: #354092;
+  color: white;
   font-weight: 600;
 }
 small {
   color: #d8b638;
+}
+
+/* #354092 */
+/*  */
+.navbar-bg {
+  background-color: rgba(17, 40, 135, 1);
+}
+
+.navbar-link {
+  color: white;
+}
+
+.nav-link {
+  color: white !important;
 }
